feat init pencil boot

--- a/pencil-boot-common/pom.xml
+++ b/pencil-boot-common/pom.xml
@@ -24,4 +24,15 @@
             <artifactId>transmittable-thread-local</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/**</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 </project>
