--- a/pencil-boot-dependencies/pom.xml
+++ b/pencil-boot-dependencies/pom.xml
@@ -30,6 +30,7 @@
         <ahocorasick.version>0.6.3</ahocorasick.version>
         <ttl.version>2.14.5</ttl.version>
         <druid.version>1.2.23</druid.version>
+        <spring.admin.version>2.7.15</spring.admin.version>
     </properties>
 
     <dependencyManagement>
@@ -100,6 +101,12 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-mate-starter</artifactId>
                 <version>${mybatis-mate.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-client</artifactId>
+                <version>${spring.admin.version}</version>
             </dependency>
             <!--敏感词-->
             <dependency>
