--- a/pencil-boot-middleware/pencil-boot-mysql/pom.xml
+++ b/pencil-boot-middleware/pencil-boot-mysql/pom.xml
@@ -18,6 +18,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <resources>
             <resource>
