feat: 集成 SkyWalking 日志追踪 - 在 logback-spring.xml 中添加 SkyWalking TraceID 工具包- 修改日志模式，增加 %tid 占位符用于输出 SkyWalking TraceID - 在 dependencies 中添加 SkyWalking logback 工具包依赖 - 更新多个环境的日志配置

--- a/pencil-boot-dependencies/pom.xml
+++ b/pencil-boot-dependencies/pom.xml
@@ -121,6 +121,12 @@
                 <version>${ttl.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.skywalking</groupId>
+                <artifactId>apm-toolkit-logback-1.x</artifactId>
+                <version>8.12.0</version> <!-- 建议使用与你Agent相同的版本 -->
+            </dependency>
+
             <!--<<pencil-spring>>-->
             <dependency>
                 <groupId>org.pencil.boot</groupId>
