--- a/pencil-boot-starter/pencil-boot-starter-web/pom.xml
+++ b/pencil-boot-starter/pencil-boot-starter-web/pom.xml
@@ -55,6 +55,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.skywalking</groupId>
+            <artifactId>apm-toolkit-logback-1.x</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
